Fixed "no scrollbar" issue on Firefox.
Withouth the addition of min-height and min-width to a full height columnar flex layout, on Firefox no scrollbar is displayed. Added that css to app-root to resolve.

Reference: https://bugzilla.mozilla.org/show_bug.cgi?id=1043520

--- a/frontend/random-quote-machine/src/styles.scss
+++ b/frontend/random-quote-machine/src/styles.scss
@@ -18,6 +18,8 @@ app-root {
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-width:0;
+  min-height:0;
 }
 
 
